Re-added news test images

--- a/nyheter/index.html
+++ b/nyheter/index.html
@@ -160,54 +160,31 @@
 								<a href="#"><p class="micro bold text-blue" style="margin-top: 15px;">Länk PM1</p></a>
 								<a href="#"><p class="micro bold text-blue">Länk PM2</p></a>
 							</div>
-						</div>
-
-						<!-- newsletter widget -->
-						<div class="pad lightgrey-border" id="newsletter-widget">
 							<h3 class="pad-header margin-0" style="padding-left: 20px;">
 								Nyhetsbrev
 							</h3>
-							<div class="margin-left-2" style="margin-top: 15px;">
-								<a href="#"><p class="micro bold text-blue">länk till nyhetsbrev #1</p></a>
-								<a href="#"><p class="micro bold text-blue">länk till nyhetsbrev #2</p></a>
+							<div class="margin-left-2">
+									<a href="#"><p class="micro bold text-blue" style="margin-top: 15px;">länk till nyhetsbrev #1</p></a>
+									<a href="#"><p class="micro bold text-blue">länk till nyhetsbrev #2</p></a>
 							</div>
 						</div>
 					</div>
 
 					<!-- newsflow title -->
-					<h1 class="fix-5-12 left fromRight" id="news-title">
+					<h1 class="fix-5-12 left fromRight" id="news-title" style="padding: 20px;">
 						Händelser
 						<div class="border-bottom-grey" style="margin: 0;"></div>
 					</h1>
 					<!-- newsflow list / latest first -->
-					<div class="fix-5-12 fromRight" id="news">
+					<div class="fix-5-12 fromRight" id="news" style="padding: 20px;">
+
 						<div >
 							<h3>Rinkebyterrassen, Rinkeby</h3>
 							<p>
 								Rinkebyterrassen är nu färdigställt och har invigning under helgen den 15:e till 16:e September.
 							</p>
 							<div class="fromLeft left">
-								<img class="soft-shadow img-border-radius"src="../assets/img/projects/sweco_rinkebyterrass.jpg" alt="Foto av Rinkebyterrassen, Rinkeby">
-								<p class="micro text-blueGrey center">Rinkebyterrassen, Rinkeby</p>
-							</div>
-						</div>
-						<div >
-							<h3>Rinkebyterrassen, Rinkeby</h3>
-							<p>
-								Rinkebyterrassen är nu färdigställt och har invigning under helgen den 15:e till 16:e September.
-							</p>
-							<div class="fromLeft left">
-								<img class="soft-shadow img-border-radius"src="../assets/img/projects/sweco_rinkebyterrass.jpg" alt="Foto av Rinkebyterrassen, Rinkeby">
-								<p class="micro text-blueGrey center">Rinkebyterrassen, Rinkeby</p>
-							</div>
-						</div>
-						<div >
-							<h3>Rinkebyterrassen, Rinkeby</h3>
-							<p>
-								Rinkebyterrassen är nu färdigställt och har invigning under helgen den 15:e till 16:e September.
-							</p>
-							<div class="fromLeft left">
-								<img class="soft-shadow img-border-radius"src="../assets/img/projects/sweco_rinkebyterrass.jpg" alt="Foto av Rinkebyterrassen, Rinkeby">
+								<img class="soft-shadow img-border-radius"src="../assets/img/projects/brf_terrassen.jpg" alt="Foto av Rinkebyterrassen, Rinkeby">
 								<p class="micro text-blueGrey center">Rinkebyterrassen, Rinkeby</p>
 							</div>
 						</div>
