--- a/karriar/index.html
+++ b/karriar/index.html
@@ -15,7 +15,7 @@
 	<!-- Making the website social media friendly-->
 	<meta name="description" content="Vi erbjuder certifierade &amp; oberoende besiktningsmän för  både fastighet &amp; utemiljö. Du hittar oss bland annat i Stockholm, Malmö &amp; Göteborg. Kontakta oss" />
 	<meta name="robots" content="noodp" />
-	<link rel="canonical" href="http://www.besiktningsman.se/" />
+	<link rel="canonical" href="http://www.besiktningsman.se/karriar" />
 	<meta property="og:locale" content="sv_SE" />
 	<meta property="og:type" content="website" />
 	<meta property="og:title" content="Vi är ett fristående besiktningsföretag som utför besiktningar objektivt och opartiskt enligt gällande bygg- och branschregler." />
