Made meta tags for each page more relevant

--- a/tjanster/entreprenad/index.html
+++ b/tjanster/entreprenad/index.html
@@ -6,10 +6,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
 	<meta name="apple-mobile-web-app-capable" content="yes" />
-	<meta name="keywords" content="besiktningsman.se, besiktningar, syner, bygg, entreprenad, ncc, skanska, jm, entreprenör, byggentreprenör, noteringar, dokument, ritningar, projekt,
-						fallstudie, lösningar, översikt, samlingsplats, ispect, ispect-portal, återrapportering, rapportering, felnotering, bygglösningar,
-						lean production, lean startup, startup, construction, industri, besiktning, besiktiga, besikta, entreprenadbesiktning, besiktningsman,
-						ritningsapp, kontroll, arbetsledare, platschef, entreprenadingenjör, bygg app, lean bygg, projekthantering, kommunikation,">
+	<meta name="keywords" content="besiktningsman.se, ispect, ispekt, ispect-portal, besiktningar, entreprenadbesiktning, husbesiktning, besiktningsman, förbesiktning, slutbesiktning, ny slutbesiktning, fortsatt slutbesiktning, efterbesiktning, särskild besiktning, statusbesiktning, garantibesiktning, 2-årsbesiktning, överbesiktning, OVK, fuktbesiktning, överlåtelsebesiktning">
 	<!-- favicons -->
 	<link rel="shortcut icon" href="../../favicon.ico">
 	<!-- Making the website social media friendly-->
@@ -20,7 +17,7 @@
 	<meta property="og:type" content="website" />
 	<meta property="og:title" content="Vi är ett fristående besiktningsföretag som utför besiktningar objektivt och opartiskt enligt gällande bygg- och branschregler." />
 	<meta property="og:description" content="Vi erbjuder certifierade &amp; oberoende besiktningsmän för  både fastighet &amp; utemiljö. Du hittar oss bland annat i Stockholm, Malmö &amp; Göteborg. Kontakta oss" />
-	<meta property="og:url" content="http://www.besiktningsman.se/" />
+	<meta property="og:url" content="http://www.besiktningsman.se/tjanster/entreprenad" />
 	<meta property="og:site_name" content="Besiktningsman.se | Sveriges ledande besiktningsföretag">
 	<meta property="og:image" content="http://imgur.com/a/6rCJ6">
 	<meta name="twitter:card" content="Digital besiktning för lönsammare byggprojekt" />
