meta tags and some text styling

--- a/tjanster/brf/index.html
+++ b/tjanster/brf/index.html
@@ -6,21 +6,18 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
 	<meta name="apple-mobile-web-app-capable" content="yes" />
-	<meta name="keywords" content="besiktningsman.se, besiktningar, syner, bygg, entreprenad, ncc, skanska, jm, entreprenör, byggentreprenör, noteringar, dokument, ritningar, projekt,
-						fallstudie, lösningar, översikt, samlingsplats, ispect, ispect-portal, återrapportering, rapportering, felnotering, bygglösningar,
-						lean production, lean startup, startup, construction, industri, besiktning, besiktiga, besikta, entreprenadbesiktning, besiktningsman,
-						ritningsapp, kontroll, arbetsledare, platschef, entreprenadingenjör, bygg app, lean bygg, projekthantering, kommunikation,">
+	<meta name="keywords" content="besiktningsman.se, besiktningar, husbesiktning, besiktningsman, förbesiktning, slutbesiktning, ny slutbesiktning, fortsatt slutbesiktning, efterbesiktning, särskild besiktning, statusbesiktning, garantibesiktning, 2-årsbesiktning, överbesiktning, OVK, fuktbesiktning, överlåtelsebesiktning, kontrollansvarig, brf, bostadsrättsförening, lägenhetsbesiktning, kontroll av lägenhet">
 	<!-- favicons -->
 	<link rel="shortcut icon" href="../../favicon.ico">
 	<!-- Making the website social media friendly-->
 	<meta name="description" content="Vi erbjuder certifierade &amp; oberoende besiktningsmän för  både fastighet &amp; utemiljö. Du hittar oss bland annat i Stockholm, Malmö &amp; Göteborg. Kontakta oss" />
 	<meta name="robots" content="noodp" />
-	<link rel="canonical" href="http://www.besiktningsman.se/" />
+	<link rel="canonical" href="http://www.besiktningsman.se/tjanster/brf" />
 	<meta property="og:locale" content="sv_SE" />
 	<meta property="og:type" content="website" />
 	<meta property="og:title" content="Vi är ett fristående besiktningsföretag som utför besiktningar objektivt och opartiskt enligt gällande bygg- och branschregler." />
 	<meta property="og:description" content="Vi erbjuder certifierade &amp; oberoende besiktningsmän för  både fastighet &amp; utemiljö. Du hittar oss bland annat i Stockholm, Malmö &amp; Göteborg. Kontakta oss" />
-	<meta property="og:url" content="http://www.besiktningsman.se/" />
+	<meta property="og:url" content="http://www.besiktningsman.se/tjanster/brf" />
 	<meta property="og:site_name" content="Besiktningsman.se | Sveriges ledande besiktningsföretag">
 	<meta property="og:image" content="http://imgur.com/a/6rCJ6">
 	<meta name="twitter:card" content="Digital besiktning för lönsammare byggprojekt" />
@@ -131,8 +128,8 @@
 <section class="slide whiteSlide autoHeight" id="brf-offer">
 	<div class="container-lg">
 		<div class="fix-10-12 margin-top-1">
-			<div class="left cropBottom">
-				<h1>Besiktningsman för bostadsrättsföreningar</h1>
+			<div class="left">
+				<h1 style="margin-left: -3px;">Besiktningsman för bostadsrättsföreningar</h1>
 				<h3>Digital besiktningsprocess</h3>
 				<p>
 					I en bostadsrättsförening pågår ständigt förbättringar dels i lägenheterna och dels i fastigheten som helhet. Styrelsen har ett stort ansvar för fastigheten gällande myndighets- och försäkringskrav samt att hålla fastigheten i ett bra skick med underhålls-
@@ -147,25 +144,33 @@
 				<p>
 					Vi har även KA-kontrollansvarig.
 				</p>
-				<h3>I våra priser ingår:</h3>
-				<p>
-					Vår projektansvarige för all kontakt och samordning med besiktningsman eller besiktningsgrupp kallelser, restid, besiktning på plats, digitalt utskick av utlåtande.
-				</p>
-				<p>
-					Upprättande av besiktningstidplan med eventuella justeringar, beroende på typ av besiktning,
-				</p>
-				<p>
-					Ett informationsmöte med brf-styrelsen om hur besiktningen går till, beroende på typ av besiktning,
-				</p>
-				<p>
-					Vid längre samarbeten har ni alltid er ”egen” huvudbesiktningsman och projektansvarige.
-				</p>
-				<p>
-					I vårt nätverk kan vi även erbjuda projektledning/upphandling.
-				</p>
-				<p>
-					Om ni har en nyproducerad brf och söker besiktningsgrupp för 2-års besiktning/garantibesiktning offererar vi ett fast pris till er.
-				</p>
+				<div class="fix-5-12 fromLeft">
+					<h3>I våra priser ingår:</h3>
+					<div class="checkmark"></div>
+					<p class="small" style="margin-left: 24px;">
+						Vår projektansvarige för all kontakt och samordning med besiktningsman eller besiktningsgrupp kallelser, restid, besiktning på plats, digitalt utskick av utlåtande.
+					</p>
+					<div class="checkmark"></div>
+					<p class="small" style="margin-left: 24px;">
+						Upprättande av besiktningstidplan med eventuella justeringar, beroende på typ av besiktning,
+					</p>
+					<div class="checkmark"></div>
+					<p class="small" style="margin-left: 24px;">
+						Ett informationsmöte med brf-styrelsen om hur besiktningen går till, beroende på typ av besiktning,
+					</p>
+					<div class="checkmark"></div>
+					<p class="small" style="margin-left: 24px;">
+						Vid längre samarbeten har ni alltid er ”egen” huvudbesiktningsman och projektansvarige.
+					</p>
+					<div class="checkmark"></div>
+					<p class="small" style="margin-left: 24px;">
+						I vårt nätverk kan vi även erbjuda projektledning/upphandling.
+					</p>
+					<div class="checkmark"></div>
+					<p class="small" style="margin-left: 24px;">
+						Om ni har en nyproducerad brf och söker besiktningsgrupp för 2-års besiktning/garantibesiktning offererar vi ett fast pris till er.
+					</p>
+				</div>
 
 			</div>
 		</div>
@@ -189,19 +194,20 @@
 							<b>Vid nyproduktion</b> av bostadsrättsfastigheter erbjuder vi besiktningstjänster enligt vårt erbjudande för entreprenadbesiktning.
 						</p>
 						<p><b>För befintliga bostadsrättsföreningar</b> där beställaren är brf-styrelse eller förvaltare erbjuder vi fasta priser på besiktningar gällande de flesta åtgärder i en fastighet. I annat fall sker timdebitering.</p>
-						<p>I våra priser ingår:</p>
-						<ul>
-							<li><p>• En projektansvarig från Besiktningsman.se för all kontakt och samordning med besiktningsman eller besiktningsgrupp kallelser, restid, besiktning på plats, digitalt utskick av utlåtande.</p></li>
-							<li><p>• Upprättande av besiktningstidplan med eventuella justeringar, beroende på typ av besiktning.</p></li>
-							<li><p>• Ett informationsmöte med brf-styrelsen om hur besiktningen genomförs, beroende på typ av besiktning.</p></li>
-						</ul>
+						<p class="bold">I våra priser ingår:</p>
+						<div class="checkmark"></div>
+						<p class="small" style="margin-left:24px;">En projektansvarig från Besiktningsman.se för all kontakt och samordning med besiktningsman eller besiktningsgrupp kallelser, restid, besiktning på plats, digitalt utskick av utlåtande.</p>
+						<div class="checkmark"></div>
+						<p class="small">Upprättande av besiktningstidplan med eventuella justeringar, beroende på typ av besiktning.</p>
+						<div class="checkmark"></div>
+						<p class="small">Ett informationsmöte med brf-styrelsen om hur besiktningen genomförs, beroende på typ av besiktning.</p>
 						<p>
-							Vid längre samarbeten har ni alltid er ”egen” huvudbesiktningsman och projektansvarige. Via samarbetspartners erbjuder vi även projektledning/upphandling.
+							<b>Vid längre samarbeten</b> har ni alltid er ”egen” huvudbesiktningsman och projektansvarige. Via samarbetspartners erbjuder vi även projektledning/upphandling.
 							Om ni har en nyproducerad brf och söker besiktningsgrupp för 2-års besiktning/garantibesiktning offererar vi ett fast pris till er.
 						</p>
 					</div>
 					<div class="fix-10-12 left">
-						<h2 class="small bold">Besiktningstjänster</h2>
+						<h2 class="small bold" style="margin-top:30px;">Besiktningstjänster</h2>
 						<div class="accordion">
 							<h3>Förbesiktning</h3>
 							<div>
