Upped the quality on the BRF photo

--- a/tjanster/privat/index.html
+++ b/tjanster/privat/index.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
 	<meta name="apple-mobile-web-app-capable" content="yes" />
-	<meta name="keywords" content="besiktningsman.se, besiktningar, husbesiktning, besiktningsman, förbesiktning, slutbesiktning, ny slutbesiktning, fortsatt slutbesiktning, efterbesiktning, särskild besiktning, statusbesiktning, garantibesiktning, 2-årsbesiktning, överbesiktning, OVK, fuktbesiktning, överlåtelsebesiktning, kontrollansvarig, paragraf 59-besiktning">
+	§
 	<!-- favicons -->
 	<link rel="shortcut icon" href="../../favicon.ico">
 	<!-- Making the website social media friendly-->
@@ -250,7 +250,7 @@
 		<div class="container">
 			<div class="wrap spaces">
 						<div class="fix-10-12 left">
-							<h1>Privatpersoner</h1>
+							<h1 style="margin-top:30px;">Privatpersoner</h1>
 							<h3>
 								Besiktning för privatpersoner som vill köpa, sälja, bygga, ändra eller kolla.
 							</h3>
