readded services links

--- a/index.html
+++ b/index.html
@@ -311,9 +311,9 @@
 				<div class="wrap">
 					<div class="fix-10-12" style="padding-top: 5%;">
 						<h1 class="">Vårt erbjudande</h1>
-						<p class="menu inlineBlock margin-right-2 underline">Entreprenad</p>
-						<p class="menu inlineBlock underline">BRF</p>
-						<p class="menu inlineBlock margin-left-2 underline">Privat</p>
+						<p class="menu inlineBlock margin-right-2 underline"><a href="#entreprenad">Entreprenad</a></p>
+						<p class="menu inlineBlock underline"><a href="#brf">BRF</a></p>
+						<p class="menu inlineBlock margin-left-2 underline"><a href="#privat">Privat</a></p>
 					</div>
 				</div>
 			</div>
@@ -686,7 +686,7 @@
 					</div>
 				</div>
 			</section>
-			
+
 		</div>
 	</div>
 
