--- a/tjanster/entreprenad/index.html
+++ b/tjanster/entreprenad/index.html
@@ -55,7 +55,7 @@
 		<div class="sections desktop">
 			<div class="left">
 				<ul class="menu crop small bold">
-					<li><div class="dialogTrigger" data-dialog-id="image">Dokument</div></li>
+					<li><div class="popupTrigger" data-popup-id="docs">Dokument</div></li>
 					<li><a href="../../nyheter/">Publicerat & Press</a></li>
 					<li><a href="../../om_oss/">Om oss</a></li>
 				</ul>
@@ -101,7 +101,7 @@
 				<li><a href="../../nyheter/"><p>Publicerat & Press</p></a></li>
 				<br>
 				<br>
-				<li><div class="dialogTrigger" data-dialog-id="image"><p class="bold small">Dokument</p></div></li>
+				<li><div class="popupTrigger" data-popup-id="docs"><p class="bold small">Dokument</p></div></li>
 			</ul>
 
 		</div>
@@ -681,35 +681,45 @@
     </div>
   </div>
 </section>
- <!-- DIALOG WITH LINKS TO LAW TEXTS -->
-	<div class="dialog hidden" data-dialog-id="image">
-		<div class="close white" data-dialog-action="close"></div>
-		<div class="text center">
-			<strong>Hej!</strong><br>
-				Nedan kan du ladda ner viktiga dokument
-				<br>där du kan läsa mer om lagar och regler
-				<br>gällande besiktningar.
-		</div>
-		<img src="../../assets/img/backgrounds/docs.jpg" class="wide" alt="Foto av dokumenthäften"/>
-		<div class="dialogContent">
-			<ul class="text-center center">
-				<li>
-					<a href="../../assets/documents/besiktningsmannaboken-2016-konsumentverket.pdf" target="_blank" class="text-blue bold small">Besiktningsmannaboken 2016</a>
-				</li>
-				<br>
-				<li>
-					<a href="../../assets/documents/konsumenttjanstlagen-rev-2016-juni-konsumentverket.pdf" target="_blank" class="text-blue bold small">Konsumenttjänstlagen</a>
-				</li>
-				<br>
-				<li>
-					<a href="../../assets/documents/hantverkarformularet-14-protokoll-konsumentverket.pdf" target="_blank" class="text-blue bold small">Hantverkarformuläret 14</a>
-				</li>
-			</ul>
-		</div>
-		<div class="center-m-down">
-			<a data-dialog-action="close" class="bold small">Stäng</a>
-		</div>
-	</div>
+<!-- POPUP WITH LINKS TO NEWSLETTER TEXTS -->
+ <div class="popup hidden" data-popup-id="docs" id="docs">
+	 <div class="close closeButton left opaque white text-blue">X</div>
+	 <div class="content">
+		 <div class="container">
+			 <div class="wrap spaces">
+				 <div class="fix-4-12 margin-top-6">
+					 <div class="pad shadow selected popupContent">
+							 <div class="absolute">
+								 <h3 class="center">DOKUMENT</h3>
+								 <p class="small center">
+										Nedan kan du ladda ner viktiga dokument
+										<br>där du kan läsa mer om lagar och regler
+										<br>gällande besiktningar.
+								</p>
+							 </div>
+							 <img src="../../assets/img/backgrounds/docs.jpg" alt="Foto av dokumenthäften"/>
+
+							 <div class="dialogContent">
+								 <ul class="text-center left">
+										<li>
+											<a href="../../assets/documents/besiktningsmannaboken-2016-konsumentverket.pdf" target="_blank" class="text-blue bold small">Besiktningsmannaboken 2016</a>
+										</li>
+										<br>
+										<li>
+											<a href="../../assets/documents/konsumenttjanstlagen-rev-2016-juni-konsumentverket.pdf" target="_blank" class="text-blue bold small">Konsumenttjänstlagen</a>
+										</li>
+										<br>
+										<li>
+											<a href="../../assets/documents/hantverkarformularet-14-protokoll-konsumentverket.pdf" target="_blank" class="text-blue bold small">Hantverkarformuläret 14</a>
+										</li>
+								 </ul>
+							 </div>
+					 </div>
+				 </div>
+			 </div>
+		 </div>
+	 </div>
+ </div>
 	<!-- Scripts -->
 	<script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
 	<script src="//code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
