The type form buttons didn't respect the left alignment

--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
 
 					<div class="fix-12-12">
 						<ul class="flex reverse">
-							<li class="col-6-12 left cell-32">
+							<li class="col-6-12 left fromLeft cell-32">
 								<h1>Entreprenadbesiktning som ökar lönsamheten.</h1>
 								<h3>Besiktningsman.se erbjuder digitaliserad entreprenadbesiktning över hela landet.</h3>
 								<ul>
@@ -348,7 +348,7 @@
 								</a> -->
 								<br>
 								<ul class="items-32">
-									<li class="fix-4-12 toLeft text-32">
+									<li class="fix-4-12 toLeft fromLeft text-32">
 										<a class="typeform-share blue common-Button" href="https://sebastian209.typeform.com/to/oZw406" data-mode="1" target="_blank">Gör offertförfrågan</a>
 										<script>
 											(function() {
@@ -471,7 +471,7 @@
 								</a>
 								<br>
 								<ul class="items-32">
-									<li class="fix-4-12 toLeft text-32">
+									<li class="fix-4-12 toLeft fromLeft text-32">
 										<a class="typeform-share blue common-Button" href="https://sebastian209.typeform.com/to/oZw406" data-mode="1" target="_blank">Gör offertförfrågan</a>
 										<script>
 											(function() {
@@ -710,7 +710,7 @@
 			</div>
 		</div>
 	</div>
- 
+
 <!-- POPUP WITH LINKS TO NEWSLETTER TEXTS -->
  <div class="popup hidden" data-popup-id="docs" id="docs">
 	 <div class="close closeButton left opaque white text-blue">X</div>
