contact page text color update

--- a/kontakt/index.html
+++ b/kontakt/index.html
@@ -133,7 +133,7 @@
 					</p>
 					<div class="fix-5-12">
 						<div class="pad shadow selected">
-							<h3 class="pad-header margin-0">
+							<h3 class="pad-header margin-0 text-blueGrey">
 								Inte tid att ringa?
 								<p class="small bold dark margin-0" style="font-size: 16px;">Lämna ett meddelande så hör vi av oss.</p>
 							</h3>
