--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="background" style="background-image:url(assets/img/backgrounds/sodermalm_summer.jpg)" alt="Foto av Skinnerviksberget, Södermalm"></div>
+		<div class="background" style="background-image:url(assets/img/backgrounds/summer/sodermalm_summer.jpg)" alt="Foto av Södermälarstrand, Södermalm"></div>
 	</section>
 	<!-- ENTERPRISE START -->
 	<section class="slide whiteSlide fromLeft autoHeight">
