Enterprise slide had no ID so the slider declarations didn't work

--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
 		<div class="background" style="background-image:url(assets/img/backgrounds/summer/sodermalm_summer.jpg)" alt="Foto av Södermälarstrand, Södermalm"></div>
 	</section>
 	<!-- ENTERPRISE START -->
-	<section class="slide whiteSlide fromLeft autoHeight">
+	<section class="slide whiteSlide fromLeft autoHeight" id="enterprise">
 		<div class="content">
 			<div class="container">
 				<div class="wrap">
