--- a/index.html
+++ b/index.html
@@ -250,7 +250,12 @@
 										<i class="icono-arrow2-left"></i>
 									</p>
 								</a>
-								<a href="kontakt/" class="common-Button blue text-white">Kontakta mig</a>
+								<a class="typeform-share common-Button blue text-white" href="https://besiktningsman-se.typeform.com/to/Qwy9Nf" data-mode="popup" target="_blank">
+									KONTAKTA MIG
+								</a>
+
+								<script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
+
 							</li>
 							<div class="col-6-12 left fromRight">
 								<!-- Projects: Slider Autoplay -->
