removed the regular type form button

--- a/index.html
+++ b/index.html
@@ -250,10 +250,11 @@
 										<i class="icono-arrow2-left"></i>
 									</p>
 								</a>
+								<!-- typeform button -->
 								<a class="typeform-share common-Button blue text-white" href="https://besiktningsman-se.typeform.com/to/Qwy9Nf" data-mode="popup" target="_blank">
 									KONTAKTA MIG
 								</a>
-
+								<!-- typeform JS -->
 								<script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
 
 							</li>
@@ -345,9 +346,6 @@
 								<p>
 									Det ger bland annat möjlighet till noll byggfel vid slutbesiktning.
 								</p>
-								<a href="/tjanster/entreprenad/">
-									<p class="common-Link">Läs mer om våra tjänster för entreprenadbesiktning<i class="icono-arrow2-left"></i></p>
-								</a>
 								<!-- <a href="/tjanster/entreprenad/#entreprenad-offer">
 									<p class="text-blue bold small">Mer om digitaliserad entreprenadbesiktning<i class="icono-arrow2-left"></i></p>
 								</a> -->
@@ -697,7 +695,7 @@
 
 	<!-- bm projects details Popup Text -->
 	<div class="popup white" data-popup-id="ispect-projects" id="ispect-projects">
-		<div class="close common-Button closeButton blue text-white soft-shadow bold">TILLBAKA</div>
+		<div class="close common-Button closeButton blue text-white soft-shadow bold">X</div>
 		<div class="content popupContent">
 			<div class="">
 				<!-- contents -->
