Fixed assets route

--- a/index.html
+++ b/index.html
@@ -730,7 +730,7 @@
 										<br>gällande besiktningar.
 								</p>
 							 </div>
-							 <img src="/assets/img/backgrounds/docs.jpg" alt="Foto av dokumenthäften"/>
+							 <img src="assets/img/backgrounds/docs.jpg" alt="Foto av dokumenthäften"/>
 
 							 <div class="dialogContent">
 								 <ul class="text-center left">
@@ -765,7 +765,7 @@
 									<h3 class="center">BYGGINTELLIGENS</h3>
 									<p class="small center">Ett nyhetsbrev från Besiktningsman.se</p>
 								</div>
-								<img src="/assets/img/backgrounds/penandpapper.jpg" alt="">
+								<img src="assets/img/backgrounds/penandpapper.jpg" alt="Foto av papper och penna">
 
 								<div class="dialogContent">
 									<ul class="text-center left">
