--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
 								<!-- <a href="/tjanster/entreprenad/#entreprenad-offer">
 									<p class="text-blue bold small">Mer om digitaliserad entreprenadbesiktning<i class="icono-arrow2-left"></i></p>
 								</a> -->
-								<a href="/tjanster/entreprenad/">
+								<a href="tjanster/entreprenad/">
 									<p class="common-Link">Läs mer om våra tjänster för entreprenadbesiktningar<i class="icono-arrow2-left"></i></p>
 								</a>
 								<br>
@@ -415,7 +415,7 @@
 								<!-- <a href="/tjanster/brf/#brf-offer">
 									<p class="common-Link">Mer om vårt erbjudande<i class="icono-arrow2-left"></i></p>
 								</a> -->
-								<a href="/tjanster/brf/">
+								<a href="tjanster/brf/">
 									<p class="common-Link">Läs mer om våra tjänster för bostadsrättsföreningar<i class="icono-arrow2-left"></i></p>
 								</a>
 								<br>
@@ -472,7 +472,7 @@
 								<!-- <a href="/tjanster/privat/#privat-offer">
 									<p class="common-Link">Mer om besiktning för småhus mm<i class="icono-arrow2-left"></i></p>
 								</a> -->
-								<a href="/tjanster/privat/">
+								<a href="tjanster/privat/">
 									<p class="common-Link">Läs mer om våra tjänster för privatpersoner<i class="icono-arrow2-left"></i></p>
 								</a>
 								<br>
