--- a/tjanster/entreprenad/index.html
+++ b/tjanster/entreprenad/index.html
@@ -107,7 +107,7 @@
 		</div>
 	</nav>
 	<!-- HEADER -->
-	<section class="slide autoHeight" data-name="home" id="">
+	<section class="slide autoHeight" data-name="home" id="entreprenad-header">
 		<div class="content">
 			<div class="container" style="height: 560px;">
 				<div class="wrap">
@@ -115,7 +115,8 @@
 					<div class="fix-10-12" style="padding-top: 5%;">
 						<h1 class="hero" style="font-weight: 400;">Entreprenadbesiktning</h1>
 						<p class="hero small">
-							Besiktningsman.se erbjuder ett komplett och rikstäckande utbud av tjänster<br> för entreprenadbesiktning för nyproduktion och ROT samt KA.
+							Besiktningsman.se erbjuder ett komplett och rikstäckande utbud av tjänster
+							<br>för entreprenadbesiktning för nyproduktion och ROT samt KA.
 						</p>
 					</div>
 
