Digital entreprenadbesiktning-popover text updated

--- a/om_oss/index.html
+++ b/om_oss/index.html
@@ -347,64 +347,104 @@
     </div>
   </div>
 </section>
-	<!-- ispect details Popup Text -->
-	<div class="popup white" data-popup-id="ispect-details" id="ispect-details">
-		<div class="close button closeButton blue text-white soft-shadow bold">TILLBAKA</div>
-		<div class="content popupContent">
+<!-- ispect details Popup Text -->
+<div class="popup white" data-popup-id="ispect-details" id="ispect-details">
+	<div class="close button closeButton blue text-white soft-shadow bold">TILLBAKA</div>
+	<div class="content popupContent">
 
-			<section class="slide white">
-				<div class="content">
-					<div class="container">
-						<div class="container-lg">
-							<div class="fix-10-12 margin-top-1 left">
-								<h1>Vårt helhetskoncept med Digitaliserad entreprenadbesiktning </h1>
-								<h3 class="margin-bottom-2">För ökad lönsamhet och leveranssäkerhet i byggprojekt.</h3>
-								<ul class="">
-									<li class="">
-										<h3>Skillnader</h3>
-										<p class="small">
-											Vid traditionell besiktning görs normalt bara för- och slutbesiktning, sedan sänds utlåtandet och felavhjälpning kan börja. Ofta sedan byggnaden tagits i bruk.
-											<br>
-											<br> Vår lösning med iSpect omfattar hela byggprocessen. Vi ser till att fel kan förebyggas och att uppkomna fel kan åtgärdas direkt.
-										</p>
-									</li>
-									<li class="">
-										<h3>Fördelar</h3>
-										<p class="small">
-											• Inga dolda fel
-											<br> • Inga onödiga produktionsstopp
-											<br> • Ökad kvalitetssträvan främjas
-											<br> • Säker och lättillgänglig dokumentation
-											<br> • Ökad möjlighet till direkt erfarenhetsåterföring
-											<br> • Möjlighet till noll fel vid överlämnandet
-											<br> • Tillgång till ”Byggfelsbank” med tidigare erfarenheter och 300 000 byggfel
-										</p>
-									</li>
-									<li class="">
-										<h3>Effekter</h3>
-										<p class="small">
-											Ökad lönsamhet i byggprojekt genom kraftigt reducerade kostader för felavhjälpning, från byggstart fram till att den 10-åriga garantiperioden passerats.
-											<br>
-											<br> Ökad leveranssäkerhet och kundnöjdhet genom ingen eller kraftigt minskad felavhjälpning efter överlämnandet
-										</p>
-									</li>
-									<li class="">
-										<h3>iSpect</h3>
-										<p class="small">
-											I vårt helhetskoncept för digitaliserad entreprenadbesiktning använder vi besiktningsappen iSpect.
-											<br>
-											iSpect har utvecklats i nära samarbete med Besiktningsman.se.
-											<br>
-											Vår lösning med iSpect omfattar hela byggprocessen.
-										</p>
-									</li>
-								</ul>
-							</div>
-
+		<section class="slide white">
+			<div class="content">
+				<div class="container">
+					<div class="container-lg">
+						<div class="fix-10-12 margin-top-1 left">
+							<h1>Vårt helhetskoncept med Digitaliserad entreprenadbesiktning </h1>
+							<h3 class="margin-bottom-2">För ökad lönsamhet och leveranssäkerhet i byggprojekt</h3>
+							<ul>
+								<li>
+									<h3>Vårt helhetskoncept innebär:</h3>
+									<p class="small">
+										•	Fortlöpande besiktning från byggstart till fullt färdigt projekt
+										<br>
+										•	Utökad byggherrekontroll enligt ett unikt upplägg
+										<br>
+										•	HBM-Huvudbesiktningsman och KA är en och samma person vilket ger byggherren en djupare kontroll av produktionen
+										<br>
+										•	Alltid vår PA-projektansvarig för all kommunikation och samordning med besiktningsgruppen
+										<br>
+										•	Allt registreras med vår unika besiktningsapp, iSpect, all dokumentation åtkomlig för projektet i portalen
+									</p>
+								</li>
+								<li>
+									<h3>Skillnader</h3>
+									<p class="small">
+										Vid traditionell besiktning görs normalt bara för- och slutbesiktning, sedan sänds utlåtandet och felavhjälpning kan börja.
+										Ofta sedan byggnaden tagits i bruk.
+										<br>
+										<br>
+										Vår lösning med iSpect omfattar hela byggprocessen. Vi ser till att fel kan förebyggas och att uppkomna fel kan åtgärdas direkt.
+									</p>
+								</li>
+								<li>
+									<h3>Fördelar</h3>
+									<p class="small">
+										•	Inga dolda fel
+										<br>
+										•	Felbilagor alltid med ansvar per entreprenör
+										<br>
+										•	Genererade felbilagor till portalen direkt vid färdig besiktning
+										<br>
+										•	Felbilagorna sorterade i portalen
+										<br>
+										•	”Digital nyckel” vid överlämnande till Byggherren
+										<br>
+										•	Inga onödiga produktionsstopp
+										<br>
+										•	Ökad kvalitetssträvan främjas
+										<br>
+										•	Säker och lättillgänglig dokumentation i portalen
+										<br>
+										•	Ökad möjlighet till erfarenhetsåterföring
+										<br>
+										•	Utvärdering av de olika entreprenörskategorierna
+										<br>
+										•	Skapar förutsättning för till noll fel vid överlämnandet
+										<br>
+										•	Med vår besiktningsapp ges tillgång till en feldadatabas, en ”Byggfelsbank” byggd på mångårig erfarenhet av besiktningar med ca 300 000 av de vanligaste byggfelen i byggbranschen.
+									</p>
+								</li>
+								<li>
+									<h3>Effekter</h3>
+									<p class="small">
+										•	Ökad lönsamhet i byggprojekt genom kraftigt reducerade kostnader för felavhjälpning, från byggstart fram till att den 10-åriga ansvarstiden passerats.
+										<br>
+										•	Ökad leveranssäkerhet
+										<br>
+										•	Ökad kundnöjdhet
+										<br>
+										•	Minskad felavhjälpningstid
+										<br>
+										•	Minskat felavhjälpande efter överlämnandet
+									</p>
+								</li>
+								<li>
+									<h3>iSpect - utvecklat av besiktningsmän för besiktningsmän</h3>
+									<p class="small">
+										I vårt helhetskoncept för digitaliserad entreprenadbesiktning använder vi vår besiktningsapp iSpect.
+										<br>
+										<br>
+										Med iSpect effektiviseras besiktningen oberoende av vem besiktningspersonen är, och utlåtandet utformas med ett nominellt språk. All pappershantering med utlåtanden, bilagor etc elimineras.
+										<br>
+										<br>
+										Vår lösning med iSpect omfattar hela besiktningsprocessen.
+									</p>
+								</li>
+							</ul>
 						</div>
+
 					</div>
 				</div>
-			</section>
+			</div>
+		</section>
 			<section class="slide whiteSlide kenBurns fromLeft autoHeight" data-name="privat" data-title="privat" id="privat">
 				<div class="content">
 					<div class="container">
